# learning_python_kafka_dashboard

./: .gitignore  Makefile  README.md  docker-compose.yml
backend/: consumers.py  database.py  main.py  models.py  pyproject.toml
frontend/: package-lock.json  package.json
frontend/components/: Delivery.tsx
frontend/pages/: index.tsx
